# k2k-proxy

./: .gitignore  .testr.conf  .travis.yml  README.md  README.rst  k2kproxy.py  requirements.txt  run_proxy.sh  setup.cfg  setup.py  tox.ini
docs/: Makefile  architecture.md  architecture.rst  conf.py  index.rst  installation.rst  usage.rst
etc/: k2k-proxy.conf
httpd/: apache-proxy.conf
mixmatch/: auth.py  config.py  k2k.py  listener.py  model.py  proxy.py  services.py  session.py
mixmatch/ext/: __init__.py  base.py  images.py  snapshots.py  volumes.py
mixmatch/migrations/: 001_initial.py
mixmatch/services/: __init__.py  image.py  volume.py
mixmatch/tests/unit/: samples.py  test_mocked.py  test_nothing.py  test_services.py
tools/: create_endpoints.py  pretty_tox.sh
