[metadata]
name = K2K Proxy
author = Massachusetts Open Cloud
author-email = knikolla@bu.edu
summary = Proxy for Resource Federation
description-file = README.rst
home-page = https://github.com/CCI-MOC/k2k-proxy
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils
[files]
packages =
    mixmatch
data_files =
    etc/ = etc/*
[entry_points]
console_scripts =
    proxy = mixmatch.proxy:main